# the_invisible_criteria_of_peer_review

./: .gitignore  README.md  data_acquisition.py  pyproject.toml  topicgpt_topic_generation_prompt_template_generation_1.txt
conf/: config.py  config.yaml
llm_pipeline/ai/: chat.py
llm_pipeline/chains/: chains.py
llm_pipeline/prompts/: correspondance_assignment.py  judge_question_separation.py  judge_topic_assignment.py  non_informant_review_filtering.py  question_separation.py  summarization.py  topic_assignment.py
llm_pipeline/utils/: embedding_generation.py
mongodb/: mongo_data_access.py
